Fix spacing on the about section

--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -179,8 +179,8 @@
 }
 
 .AboutText {
-  padding-top: $spacing;
-  padding-bottom: $spacing;
+  padding-top: $spacing * 4;
+  padding-bottom: $spacing * 4;
 }
 
 .WorkSection {
